using spam video

--- a/Pipfile
+++ b/Pipfile
@@ -70,6 +70,8 @@ Send2Trash = "*"
 service_identity = "*"
 Twisted = "*"
 "zope.interface" = "*"
+singledispatch = "*"
+rise = "*"
 
 [requires]
-python_version = "2.7"
+python_version = "3.7"
